--- a/ArmyBasePRG282/Form1.resx
+++ b/ArmyBasePRG282/Form1.resx
@@ -118,6 +118,83 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pbPlane.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        R0lGODlhoABcAMQfAAceByZrIx4gHxhOEw03CS6BLA9BDB+DHy4uMUlKSzo8PDeJNf9tWP8bG/8qJl9l
+        av90Yf9yXHx9h5+apHNzenhzNZGNlrq2w9weGq6ptdvV5aUpFszI2MV1Q8dYPAAAACH/C05FVFNDQVBF
+        Mi4wAwEAAAAh+QQJDwAfACwAAAAAoABcAAAF/+AnjmRpnmiqrmzrvnAsz3Rt33iu73zv/8CgcEgsGo9I
+        EgCQbDp/BIKB+axaZwCDgTCgXr9glFQ6MITPaIDUMCh7m290WE1eV+Pyr3rb5uKNf3lVY2xaWk+Bgk5R
+        fGtdcImKSHRkhYdJS5J6UXWGj5iaKUuROZRcWmtmk6SKAgIAAkKcqYZsrDyZoSeurrk9pqdbnqslowIK
+        CQMKywkJyM0JCLe/vK/TMcADjKifRaNcCAQJAc5tAwEK5+fQ0AixRwDur68/wMJjZQNEsMsPyeYDnKVb
+        tgxBOgQIASZ4oODajXjVYPmQQkkbKlQBHMYQgOCBP2jLOCIoBNDVgGoC2v8ECCDBn0YaABTIm/eLIsUt
+        27SUETHq26yfnHoKXdLRo0CECE5WM1CNS76SAlZKaPlSxjEFvXzpoGTqoqectcKGfVZGrE6BMpEmlRnR
+        2JQlJnWqLFAg2pCrbXGp6Qq0L6M1tMQ5GDwYQ618JMtUQ2ZhwoQHA9wZszaqS8+UBaYmqNoiXlpeH96V
+        ooPT7097hHQSXu0ggSXET5nyMoBgoQQFFKK9smyMd+8BRglwVhFPIC+JOJbIBWgugLnSpgEPYM2auXWA
+        WuDCMoCM7dvKQ9k4xS58eLHuCOcNXxLlKcCV8OOvFP5T2GHqrF1f31/WlfCllAHQxXEC8tfGFpmshx7/
+        Vr1gQ9p18sV3wAIUThgAfUDVggF+q21g4IdKwTIUAfN0hBUbIGaHUFUxNcOWKzCoYV2ENAbAxkralMde
+        hlo0wOFqIH4omwAkiqijciCmcyABBi2jkQAgcUSPgykZsNIBOJY01JZCAZWAjz7+GOSY/RFJGRfyWfeM
+        krQ544xDUB4Fow1DFVMMl1tyskEDfIaJH4pk7ueccyodeOMBiGKJaHzsKMlOMyv2lEJtDIUk2ip4CrVn
+        n5zy6YCPYrkXqEryYRlAoqieiuiaaT3a6DKo1PlBUcaZ91Cmo2zaaacO0BIqoGSWCp+iqp6KTlpIufoo
+        QQhBF4UCHzGoB64I7Gpt/19eHQYsiDVGWJBazyj7alr3DFAABQwlMOW0eFrLKzDYmnUgt92upJYrtYkL
+        EkHfCsBHAujqJgeeurrbQE9RwDuLWcsFmWZ6vNTWnZtu8svvTK8k0JK6tgaxJQYG8zkiewpzwvC2BjqH
+        sSsWt8zsvSg9YAFDlwoilAAgu7sBrt+UnJOv8+6HEsstG6QWzBEbRMHMDekyAlw57yoNz136bLJ9h8U2
+        tEhHI8VRv9UkK8EE6jptQjwYRC0y1ZliaBrWWG/NdXorvxxxQQ84VrbZZyOwQdoYTM021W4n/LbcSKNk
+        NLIGOdPRBRJIw7cog1fOJX0IJ7z1yogjNXECF0wgQf8GD9Q8OQqWp942LHK33gvR7FyggQYcXPDA6Q7K
+        CJTqVLveuoj8NCOBBRdckMEEx2+GuwtqCLtofDjxfpnv1FM6u2MWUDDVzMuvIGCEqaKaqo0Jp059RPiq
+        BU3xE1gws0cPoNv92d8PK/79+Ce6Uqy9h33+4uFCngApQECPSCAB8+MJmq6kqkXl74H3wxGCuJQ0zm2N
+        IM2A3+iMl4HGOCYDtptfFiTUQAia0ITO+Y4xunY+kbBjg8W7AAc4MDsJdMwJ9RtWCUt4wh6KL4XsoY3n
+        Wti4DMqseDOcnQYyoLzJyUhCP3SgohJVgAPQ5YpYLMACrIgouuSvilj6z9GkhDH/d3guXPGTmQWOZ4Gx
+        Mc10kmgeCYlFxyrakYsLqOIWs+hFPXpxi1zEov62wEJ5dK2IGUTXA4Z3QChJgIDRuOEQcsjALloxAFm0
+        YgECsMcu2nGLoJyQKEWpRT4G0lSw8JwZD4kQaMDPgEaRBsCMwjFFLOEczgNjA+/YRyzmkS55nJAfhZlH
+        CpkSjKayjCrpdkhXaS9gU1vIR3QjyR08sZJ2xCQm7chLPvryir8sphYpZMxf9vIA6kiYCLjGllUejRmJ
+        VGTTWvSoOYEhh1Pk4im5GUhvejOcpRxnMc2ZTSDiQSSd85wR4de0D9DTRdS8wi3tpyow8rKfgvQnMLNI
+        zo4a/zOgONIK6lDXE3j6AytKCBcyarMuOCywAjDtAANmStOZdgCmF+UmR0tJUIF69KObdEM1Q8M1Z9Ss
+        OJDSDQIQYaUKyLSmM42AVKdKValWYI89NedAf8pVuhjUB6xzhVHjEJOVfgaOQrhlAaAa1ahGgAFShUAE
+        IEDXqnZgjxsFJlf3uknniNQH87BU38x6HHhwYa1sbetb58oAuTqWro5lLF4DuteOetWvQ13B19xxAs9g
+        hS2ZFQWpElvTxUKgsXOdK2RXS9eNVtayQZ1CE1jWoMEiq6X1oCRiSQtXuDIWsqplrVwBWlm6nOOvR0Bo
+        IDwDMdzi4kal8gBvaXraxlpXuP91rYBePQrSt3xBSmh1qEGkhBywoqhbFZhuYk8r3Lv6lJxePUlo6WTP
+        zhqNI6HNQnNoRKwAVEC66kXtad96063CN6jI/a5zSZA+0FjzPbisFwMLANMNALimHvAATK+qyYFe0Q2h
+        SPAIIsa60QBKwiTs60o2SUdL8tGcmE1gMcwoouREGMUrhg+LtaniTfp4m3wMwNRkbF8p5SAqOE5yjn8c
+        5GTIlsiikEZ9YaJkHKsYSz7GYoyh7D0pdwwAVQ5zFm0kYi7PuLx0KlSYu3VFHC3YzMR5M0xufOMq/9gy
+        cMaC5H5BqjVLcL7zC29yClTnCBUqO3k+3eASLUJGO/rRkI4etKQnTelKW/rSmM60pjfN6U57+tOgDrWo
+        R03qK4QAACH5BAkPAB8ALAAAAACgAFwAAAX/4CeOZGmeaKqubOu+cCzPdG3feK7vfO//wKBwSCwaj0gS
+        AJBsOn8Eg4H5rFpnAKlhQL16vyhCdGsAm8+AKGEg7TbdZ3BaypZW4XFvOlqfPvF5VmJ0WmVOgIGHYnxa
+        XG+IiUl7BmuFhkhLkSiZRXuMjZBBoXlLozuelZaSpmYAApxEi5RsY1usp7d6S6+di2IDtXSSJbsACAkD
+        CsoJCQrMzAi5NqUCvESolcGORqVrCAQJAcwD5AEKAwHoz88IAkOvrtZD2JSWW9cCyg/I5OTK5/+UkUNA
+        sN+ABA8USIvxqpo8IVE8AQtmIMBCGAIQPJDgjJnAgmPIGag2wGHGcgEk/zC7yMKdw3YsY8yZSWlQI0Ol
+        uvnauSinzyUaHyRURrCdSQEjHW5hY7BkOQkSHsTc5LIazGvYbNajo9WeVwMd+9g72ExB0YJmj7paMmUX
+        UjrlChRIgOAUPKsPgaTxVI+nX1lqLCVwQJgwBjJkmG5BkLSaMwsTJjwYAJMtvFJcqAkYUABqgqklqrlC
+        YBZ0iyWD/Gb11VdLyMKwHSRInNigFKWkNyqgQPcVl8tIfZIcIDQBAdMfTBJFnoLt0qbl+v31Syd2bMVM
+        bfcbqRlss3ZtMf+kBZ0SLBeZlJfugXoNdJQB4suPf5w1xS0NrMPm915k05EjEXBUeEv8JhoA2/XXBv8T
+        plSTnEPL5dBebf3MZ+EBC2SIoUX1oVIIBvrBtkF/JDYlGnC7HAdAR5uVuN0UBIWy1mgCfIeIO6fxYZCF
+        PMq3RXwT5USdFPmFWJiLSN7mUDeXZYHkOYiRpgwi8dBo4wmuwLALGxaa+NOXX/qSQH5FhojkmS9WI+Ba
+        P8r3XkcKaHGMMwqhYBJBdOKxFg0/rQAmmIts0MCgZOpHIZo7RpcOOunQId8BBwQA6XzNeETOOtBEk9OD
+        VnUUjQkOYvLnT4ISamqhDoz1HKIVXhhfpJPGKuky/5CG6TNEnYOgP1LSBYdoh4xaSqmnnupAV5awuuN8
+        sErqbLPmEFXUrdR+x0z/AQHIlZAb8XzAHBbCIlDsuH+1VoiyPb46n7RFdVQtpu4mUIBQBXRR5Z5/jDqu
+        se2Vex+66cZ3llWVUktntUIlRMJROF4BJrH7NiDkaqx9lZ1//XVJ0J3udhxQvOsIpcAI8SzZyk8YRDzo
+        n9PJIoU2q7oYQEZHfWyztCAjRIHCIjgGLCnUpLzvBsJ2Q/F9yZbIcEa5BnTWtAUjBNXIDyrgkLeJBL2v
+        pkVP3LIlMNu29NMDt2N2RpXuQ4EEFtTlSlp3aSKCMRgITWjXwtbXsk2BKckw2Usf9cxGFlgwMtM0Xy33
+        3AhsUDcGXONddId7qxH42YGr1dHakSlEGmkmfXuE/+SkS0752JmHTs0xG3FwQQZ4NhP64s2VbnveqS99
+        r1u5aeC7BhZ4dLboDnczkS+3d507w7uPppEEHER/QWT7EGUS7SxkwSO0PpqXvGbLh97QLgRpMH1kUBX+
+        gFEmY78Jo8w2C+n888f38u3hZ06+AtNLQAFvCYvKxkLlPiUgKH70S6ACE2g/7xXtKOzLH9MSkIEJQOV/
+        CdsIRz5VQJKtgVnPipSkYEXCEi5QhLT4050iGD4paWQChYthZCZwgQdcr4DaAyH9RnhCBvawfo36SUae
+        JsF8lIUCFczABS4QPd9lAG4NW1wOH0XCEfJwgVf8IRbZgJohFkWCsaMLEpfIAf8nToAu1iOeXj6oQxHK
+        L4T0K8AB5DjHOtLxjj2kTxaIODayhVEBG3ndBSSgKZoZRW5p2J6zspWtOs5RLo+0ox3lQkk5LsCSjsRj
+        /WDUrr/58XO4SsDaCke1nrEvEgcEoRwbia1VyrGVc8wWJRcwR1raEkOPnGUlX1lH+Tjvc178pJQ89gAK
+        WIACdVmY4tCQykdJqpWMbCUkdykXWk7TkpTEUAEueUlq0nFSQAIKntJitk/+A1Mb2VkUR5AXh7HxVZHi
+        pTwnKU1qdnOb1bQnPin5TBE26jimxFM5zRmQkBVnnaSoCAIdyUp6XtObusznNjNE0XsuMoh4GOLlnta0
+        jiT/LAEIlUMze8jLSULqlSit5D3zyc2KZuiVjEwHQP20CeEsyRXrqFMc0sCoCvi0AwwIqlCD2gGfzhOi
+        KsVnN11a0Uou6jw/qEZO1XgD7RUAqEONQFC1GoGuerWrDKjALXfJTaUy9az85CJV7RQvnRaPM0ONK1cZ
+        8NWuQoCrWu2ALJF6VpemFapEQJu7OHiHNRQgrlmlq2K1CgEGQOCxd32sYxkglwCUta9MxVY6ANsJIy4D
+        pGtFD0oQS9rGThayEWgsZCFry2q2lKITTetMqyDVsjgjpFiBz2FJi1jV0jW1jo0sZBmwVMz+NbQyyQed
+        /oFbUSzlQh7gbWkVq9rV3rUC/5ZVqnYr2xY01IhWoBvdc9NVAenyVrjD7QBsX1rW+LQTDMpFo9Wsdo1V
+        pcufBYiueSer1d8W1a/73CxyJVSjOX2uHUJwEnwCxqMC+HQD+h2qBzzgU7GStZIlGTAPmDbffGzsB6hp
+        FYMV2SNYwRSpAu5gPlZslqJQFQBugt+Ie4QtEsJyr9QkB2eluLEeD1GNApixkBscn3o6NcMdBNXZlkxY
+        CQ35yTF1amVTnGQTGAN1TcYBjKE85Hpmi4tVVkHJIJgR9iyYyzSWZTreG2YrZy6ZZkZzmgugYw1/YS0N
+        OYpzZYxmtbYZXNEYHwH1sis+9wgdIrFzJE5kjG6N7ktN2jTxn2XgFmMkR9GTpu0usJbpTtPU06AOtahH
+        TepSm/rUqE61qlfN6la7+tWwjrWsZ01rVYcAADs=
+</value>
+  </data>
   <data name="pbBarracks.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAANsAAADmCAMAAABruQABAAAABGdBTUEAALGPC/xhBQAAAIpQTFRF////
